--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section class="hero is-primary is-bold">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title">Moroccan Youth Athletic Festival - Registration Form</h1>
+          <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025 - Registration Form</h1>
         </div>
       </div>
     </section>
