--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
   <body>
     <section class="hero is-primary is-bold">
       <div class="hero-body">
-        <div class="container">
+        <div class="container is-flex is-justify-content-space-between is-align-items-center">
           <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025 - Registration Form</h1>
+          <figure class="image is-96x96">
+            <img src="https://i.imgur.com/M7FvM0B.png" alt="MASAR Logo" style="max-height: 80px;">
+          </figure>
         </div>
       </div>
     </section>
@@ -162,7 +165,7 @@ I, the parent or legal guardian of the participant, give permission for my child
 
         var formDataString = keyValuePairs.join("&");
 
-        fetch("https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec", {
+        fetch("https://script.google.com/macros/s/AKfycbz_aHKLvz6LO3NT9y9HS9FuIlQ8NZadn2fHcn66HBaT7nheUKF3jJ6eaUN9piFKiD4l/exec", {
           redirect: "follow",
           method: "POST",
           body: formDataString,
