--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container is-flex is-justify-content-space-between is-align-items-center">
           <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025 - Registration Form</h1>
           <figure class="image is-96x96">
-            <img src="https://i.imgur.com/M7FvM0B.png" alt="MASAR Logo" style="max-height: 80px;">
+            <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" style="max-height: 80px;">
           </figure>
         </div>
       </div>
