--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <section class="hero is-primary is-bold">
       <div class="hero-body">
         <div class="container is-flex is-justify-content-space-between is-align-items-center">
-          <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025 - Registration Form</h1>
+          <h1 class="title">Moroccan Youth Athletic Festival - Registration Form</h1>
           <figure class="image is-96x96">
-            <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" style="max-height: 80px;">
+            <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent.png?raw=true" alt="MASAR Logo" style="max-height: 80px;">
           </figure>
         </div>
       </div>
