--- a/index.html
+++ b/index.html
@@ -73,18 +73,28 @@
         }
       }
     </script>
+    <style>
+      .masar-logo {
+        max-height: 120px;
+        background-color: #00c4cc;
+        border-radius: 8px;
+        padding: 4px;
+      }
+    </style>
   </head>
   <body>
     <section class="hero is-primary is-bold">
       <div class="hero-body">
         <div class="container is-flex is-justify-content-space-between is-align-items-center">
           <h1 class="title">Moroccan Youth Athletic Festival - Registration Form</h1>
-          <figure class="image is-96x96">
-            <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_LOGO_42525.png?raw=true" alt="MASAR Logo" style="max-height: 80px;">
+          <figure class="image">
+            <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
           </figure>
         </div>
       </div>
     </section>
+
+    <!-- Form continues here -->
     <form id="form" class="container m-4 pl-4" method="POST">
       <!-- Parent Info -->
       <h2 class="title is-4 mt-5">Parent Information</h2>
