--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     </script>
     <style>
       .masar-logo {
-        max-height: 130px;
+        max-height: 120px;
         background-color: #00c4cc;
-        border-radius: 10px;
+        border-radius: 8px;
         padding: 4px;
       }
     </style>
@@ -85,14 +85,14 @@
   <body>
     <section class="hero is-primary is-bold">
       <div class="hero-body">
-        <div class="container">
+        <div class="container has-text-centered">
           <div class="is-flex is-justify-content-space-between is-align-items-center">
-            <h1 class="title">Moroccan Youth Athletic Festival - Registration Form</h1>
+            <h1 class="title is-3">Moroccan Youth Athletic Festival - Registration Form</h1>
             <figure class="image">
               <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
             </figure>
           </div>
-          <p class="has-text-centered has-text-weight-semibold mt-2">Spring 2025</p>
+          <p class="subtitle is-5 mt-2">Spring 2025</p>
         </div>
       </div>
     </section>
