--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
             </figure>
           </div>
-          <p class="subtitle is-5 mt-2">Spring 2025</p>
+          <!-- <p class="subtitle is-5 mt-2">Spring 2025</p> -->
         </div>
       </div>
     </section>
