--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <div class="is-flex is-justify-content-space-between is-align-items-center">
-            <h1 class="title is-3">Moroccan Youth Athletic Festival - Registration Form</h1>
+            <h1 class="title is-3">Moroccan Youth Athletic Festival - Spring 2025</h1>
+            <h2 class="title is-2">Registration Form</h2>
             <figure class="image">
               <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
             </figure>
