--- a/index.html
+++ b/index.html
@@ -85,15 +85,17 @@
   <body>
     <section class="hero is-primary is-bold">
       <div class="hero-body">
-        <div class="container has-text-centered">
-          <div class="is-flex is-justify-content-space-between is-align-items-center">
-            <h1 class="title is-3">Moroccan Youth Athletic Festival - Spring 2025</h1>
-            <figure class="image">
+        <div class="container">
+        <div class="columns is-vcentered is-variable is-2">
+          <div class="column is-9 has-text-centered">
+            <h1 class="title is-2">Moroccan Youth Athletic Festival - Spring 2025</h1>
+            <h2 class="subtitle is-4 mt-2">Registration Form</h2>
+          </div>
+          <div class="column is-3 has-text-right">
+            <figure class="image is-96x96 is-inline-block">
               <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
             </figure>
           </div>
-          <!-- <p class="subtitle is-5 mt-2">Spring 2025</p> -->
-          <h1 class="title is-2">Registration Form</h1>
         </div>
       </div>
     </section>
