--- a/index.html
+++ b/index.html
@@ -73,34 +73,15 @@
         }
       }
     </script>
-    <style>
-      .masar-logo {
-        max-height: 120px;
-        background-color: #00c4cc;
-        border-radius: 8px;
-        padding: 4px;
-      }
-    </style>
   </head>
   <body>
     <section class="hero is-primary is-bold">
       <div class="hero-body">
         <div class="container">
-        <div class="columns is-vcentered is-variable is-2">
-          <div class="column is-9 has-text-centered">
-            <h1 class="title is-2">Moroccan Youth Athletic Festival - Spring 2025</h1>
-            <h2 class="subtitle is-4 mt-2">Registration Form</h2>
-          </div>
-          <div class="column is-3 has-text-right">
-            <figure class="image is-96x96 is-inline-block">
-              <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
-            </figure>
-          </div>
+          <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025 - Registration Form</h1>
         </div>
       </div>
     </section>
-
-    <!-- Form continues here -->
     <form id="form" class="container m-4 pl-4" method="POST">
       <!-- Parent Info -->
       <h2 class="title is-4 mt-5">Parent Information</h2>
