--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
             <label class="label">Gender</label>
             <div class="control">
               <label class="radio">
-                <input type="radio" name="Gender-\${id}" value="male" /> Male
+                <input type="radio" name="Gender[]" value="male" required /> Male
               </label>
               <label class="radio">
-                <input type="radio" name="Gender-\${id}" value="female" /> Female
+                <input type="radio" name="Gender[]" value="female" /> Female
               </label>
             </div>
           </div>
+
 
           <div class="field">
             <label class="label">Soccer Level</label>
