--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
           </div>
 
           <div class="field">
-            <label class="radio">
-              <input type="radio" name="Gender[]" value="male" required /> Male
-            </label>
-            <label class="radio">
-              <input type="radio" name="Gender[]" value="female" /> Female
-            </label>
+            <label class="label">Gender</label>
+            <div class="control">
+              <label class="radio">
+                <input type="radio" name="Gender-\${id}" value="male" /> Male
+              </label>
+              <label class="radio">
+                <input type="radio" name="Gender-\${id}" value="female" /> Female
+              </label>
             </div>
           </div>
-
 
           <div class="field">
             <label class="label">Soccer Level</label>
