--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
+    <style>
+      .masar-logo {
+        max-height: 120px;
+        background-color: #00c4cc;
+        border-radius: 8px;
+        padding: 4px;
+      }
+    </style>
     <script>
       function addParticipant() {
         const container = document.getElementById("participants-container");
@@ -42,10 +50,10 @@
             <label class="label">Gender</label>
             <div class="control">
               <label class="radio">
-                <input type="radio" name="Gender-\${id}" value="male" /> Male
+                <input type="radio" name="Gender[]" value="male" required /> Male
               </label>
               <label class="radio">
-                <input type="radio" name="Gender-\${id}" value="female" /> Female
+                <input type="radio" name="Gender[]" value="female" /> Female
               </label>
             </div>
           </div>
@@ -78,7 +86,17 @@
     <section class="hero is-primary is-bold">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025 - Registration Form</h1>
+          <div class="columns is-vcentered">
+            <div class="column has-text-centered">
+              <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025</h1>
+              <h2 class="subtitle is-4">Registration Form</h2>
+            </div>
+            <div class="column is-narrow">
+              <figure class="image is-128x128">
+                <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
+              </figure>
+            </div>
+          </div>
         </div>
       </div>
     </section>
