--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
           </div>
 
           <div class="field">
-            <label class="label">Gender</label>
-            <div class="control">
-              <label class="radio">
-                <input type="radio" name="Gender[]" value="male" required /> Male
-              </label>
-              <label class="radio">
-                <input type="radio" name="Gender[]" value="female" /> Female
-              </label>
-            </div>
+          <label class="label">Gender</label>
+          <div class="control">
+            <label class="radio">
+              <input type="radio" name="Gender[\${index-1}]" value="male" required /> Male
+            </label>
+            <label class="radio">
+              <input type="radio" name="Gender[\${index-1}]" value="female" /> Female
+            </label>
           </div>
+        </div>
 
           <div class="field">
             <label class="label">Soccer Level</label>
