--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="column is-narrow">
               <figure class="image is-128x128">
-                <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
+                <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" alt="MASAR Logo" class="masar-logo">
               </figure>
             </div>
           </div>
